<resources>
    <string name="app_name">MandatoryAssignmentV2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <array name="sortings">
        <item>Title ascending</item>
        <item>Title descending</item>
        <item>Price ascending</item>
        <item>Price descending</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="sign_up">SIGN UP</string>
</resources>